# Utah-River-Lake-Data

./: .dockerignore  .gitignore  README.md  docker-compose.yml
.github/workflows/: docker-build.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/src/utah_river_lake_backend/: __init__.py  app.py  usgs_client.py
backend/src/utah_river_lake_backend/routers/: __init__.py  lakes.py  rivers.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.svelte  app.css
frontend/src/lib/: LakeData.svelte  RiverData.svelte  api.js  config.js
