[project]
name = "utah_river_lake_backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.28.0",
    "pydantic>=2.10.0"
]

[tool.hatch.envs.default.scripts]
dev-server = "uvicorn utah_river_lake_backend.app:app --reload --host 0.0.0.0 --port 8000"

[tool.hatch.envs.default]
dependencies = [
    "hatch"
]

[build-system]
requires = ["hatchling"]

build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages = ["src/utah_river_lake_backend"]
